--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 mongodb = "3.4.1"
 serde = { version = "1.0", features = ["derive"] }
+async-trait = "0.1"
+axum="0.8.7"
