--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,3 +8,4 @@ mongodb = "3.4.1"
 serde = { version = "1.0", features = ["derive"] }
 async-trait = "0.1"
 axum="0.8.7"
+tokio = { version = "1", features = ["full"] }
